--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ CREATE_IMAGE_MODEL=imagen-3.0-generate-002
 UPLOAD_PROVIDER=smms
 SMMS_SECRET_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 ##########################################################################
+CLAUDE_API_KEYS=["sk-ant-sid01-...", "sk-ant-sid01-..."]  # Claude 的密钥
+CLAUDE_BASE_URL=https://api.anthropic.com  # Claude 的基础 URL (如果需要自定义，请修改)
